# adapter-program

./: Cargo.toml  README.md
benches/: create_account.rs
benches/setup/: mod.rs
src/: entrypoint.rs  instruction.rs  lib.rs  processor.rs
tests/: create_account.rs
