[package]
name = "adapter-program"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pinocchio = { version = "0.7", git = "https://github.com/anza-xyz/pinocchio.git", branch = "febo/adapter" }
pinocchio-adapter = { version = "0.1", git = "https://github.com/anza-xyz/pinocchio.git", branch = "febo/adapter" }
pinocchio-system = { version = "0.2", git = "https://github.com/anza-xyz/pinocchio.git", branch = "febo/adapter" }
solana-account-info = "2.1"
solana-cpi = "2.1"
solana-instruction = "2.1"
solana-msg = "2.1"
solana-program-entrypoint = "2.1"
solana-program-error = "2.1"
solana-pubkey = "2.1"
solana-system-interface = {version = "1.0.0", features = ["bincode"] }

[dev-dependencies]
mollusk-svm = { version = "0.0.15", git = "https://github.com/buffalojoec/mollusk.git" }
mollusk-svm-bencher = { version = "0.0.15", git = "https://github.com/buffalojoec/mollusk.git" }
solana-account = "2.1"
